// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flags > --run-dev > should apply #0 1`] = `
Object {
  "devtool": "eval-cheap-module-source-map",
  "entry": "<PROJECT_ROOT>/test/fixtures/common/entry-a.js",
  "mode": "development",
  "plugins": Array [
    LoaderOptionsPlugin {
      "options": Object {
        "debug": true,
        "test": Object {
          "test": [Function],
        },
      },
    },
    NamedModulesPlugin {
      "options": Object {},
    },
  ],
  "reporter": "<PROJECT_ROOT>/test/fixtures/common/test-reporter.js",
}
`;

exports[`Flags > --run-dev > should build #0 1`] = `
"Version: webpack 4.39.2
  Asset      Size  Chunks             Chunk Names
main.js  4.32 KiB    main  [emitted]  main
Entrypoint main = main.js
[./test/fixtures/common/entry-a.js] 40 bytes {main} [built]"
`;

exports[`Flags > --run-dev > should build #1 1`] = `"686bf656"`;

exports[`Flags > --run-prod > should apply #0 1`] = `
Object {
  "entry": "<PROJECT_ROOT>/test/fixtures/common/entry-a.js",
  "mode": "development",
  "plugins": Array [
    NamedModulesPlugin {
      "options": Object {},
    },
  ],
  "reporter": "<PROJECT_ROOT>/test/fixtures/common/test-reporter.js",
}
`;

exports[`Flags > --run-prod > should build #0 1`] = `
"Version: webpack 4.39.2
  Asset      Size  Chunks             Chunk Names
main.js  3.92 KiB    main  [emitted]  main
Entrypoint main = main.js
[./test/fixtures/common/entry-a.js] 40 bytes {main} [built]"
`;

exports[`Flags > --run-prod > should build #1 1`] = `"fd728305"`;
